[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tibet-cortex"
version = "0.2.0"
description = "TIBET Cortex — Zero-trust AI knowledge processing. JIS-gated, Airlock-protected, TIBET-audited."
readme = "README.md"
license = "MIT OR Apache-2.0"
requires-python = ">=3.9"
authors = [
    {name = "Jasper van de Meent", email = "jasper@humotica.nl"},
]
keywords = ["security", "zero-trust", "ai", "rag", "provenance", "access-control", "audit"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Rust",
    "Topic :: Security",
    "Topic :: Security :: Cryptography",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "cryptography>=41.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.0", "pytest-cov"]

[project.urls]
Homepage = "https://github.com/jaspertvdm/tibet-cortex"
Repository = "https://github.com/jaspertvdm/tibet-cortex"
Issues = "https://github.com/jaspertvdm/tibet-cortex/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["cortex*"]
