[package]
name = "tibet-cortex-airlock"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
readme = "../../README.md"
description = "tibet-cortex-airlock: zero-plaintext-lifetime processing with mlock and zeroize"
keywords = ["security", "zero-trust", "memory-safety", "zeroize", "airlock"]
categories = ["cryptography", "memory-management"]

[dependencies]
cortex-core = { package = "tibet-cortex-core", path = "../cortex-core", version = "0.3.0" }
zeroize.workspace = true
thiserror.workspace = true
tracing.workspace = true
chrono.workspace = true
serde.workspace = true
serde_json.workspace = true

[target.'cfg(unix)'.dependencies]
libc = "0.2"
