[package]
name = "tibet-cortex-cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
readme = "../../README.md"
description = "tibet-cortex-cli: zero-trust AI knowledge processing from the command line"
keywords = ["security", "zero-trust", "ai", "cli", "rag"]
categories = ["command-line-utilities"]

[[bin]]
name = "cortex"
path = "src/main.rs"

[dependencies]
cortex-core = { package = "tibet-cortex-core", path = "../cortex-core", version = "0.3.0" }
cortex-airlock = { package = "tibet-cortex-airlock", path = "../cortex-airlock", version = "0.3.0" }
cortex-jis = { package = "tibet-cortex-jis", path = "../cortex-jis", version = "0.3.0" }
cortex-store = { package = "tibet-cortex-store", path = "../cortex-store", version = "0.3.0" }
cortex-audit = { package = "tibet-cortex-audit", path = "../cortex-audit", version = "0.3.0" }
sha2.workspace = true
clap.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tokio.workspace = true
anyhow.workspace = true
