[package]
name = "cortex-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
readme = "../../README.md"
description = "TIBET Cortex core types: TBZ envelopes, TIBET tokens, and crypto primitives"
keywords = ["security", "zero-trust", "ai", "provenance", "cryptography"]
categories = ["cryptography", "data-structures"]

[dependencies]
ed25519-dalek.workspace = true
sha2.workspace = true
zeroize.workspace = true
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
thiserror.workspace = true
hex.workspace = true
rand.workspace = true
