[package]
name = "cortex-jis"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
readme = "../../README.md"
description = "TIBET Cortex JIS: multi-dimensional identity claims — role, time, geo, clearance"
keywords = ["security", "access-control", "identity", "zero-trust", "claims"]
categories = ["authentication", "cryptography"]

[dependencies]
cortex-core = { path = "../cortex-core", version = "0.1.0" }
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
thiserror.workspace = true
tracing.workspace = true
