[package]
name = "cortex-store"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
readme = "../../README.md"
description = "TIBET Cortex Store: JIS-gated vector storage with TBZ envelopes"
keywords = ["security", "vector-store", "zero-trust", "rag", "ai"]
categories = ["database", "cryptography"]

[dependencies]
cortex-core = { path = "../cortex-core", version = "0.2.0" }
cortex-jis = { path = "../cortex-jis", version = "0.2.0" }
cortex-airlock = { path = "../cortex-airlock", version = "0.2.0" }
sled.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
thiserror.workspace = true
tracing.workspace = true
chrono.workspace = true

[dev-dependencies]
tempfile.workspace = true
