[package]
name = "cortex-tests"
version.workspace = true
edition.workspace = true
publish = false

[dev-dependencies]
cortex-core = { path = "../cortex-core" }
cortex-airlock = { path = "../cortex-airlock" }
cortex-jis = { path = "../cortex-jis" }
cortex-store = { path = "../cortex-store" }
cortex-audit = { path = "../cortex-audit" }
serde_json.workspace = true
tempfile.workspace = true
